--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,3 +51,10 @@ h6 {
 #__next {
   isolation: isolate;
 }
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
